# Native-Miuchiz-Handheld-USB-Utilities

./: CMakeLists.txt  README.md  build-all.sh
CMakeToolchains/: arm.cmake  x86_64-w64-mingw32.cmake
libmiuchiz/: CMakeLists.txt  Makefile
libmiuchiz-usb/: CMakeLists.txt
libmiuchiz-usb/include/: backend.h  commands.h  libmiuchiz-usb.h  log.h  sleep.h  timer.h
libmiuchiz-usb/src/: backend-emu.c  backend-internal.h  backend-libusb.c  backend-linux.c  backend-windows.c  backend.c  commands.c  libmiuchiz-usb.c  log.c  sleep.c  timer.c
libmiuchiz-usb/tests/: paths-conformance.c  test-vectors.txt
libmiuchiz/include/: commands.h  libmiuchiz.h  timer.h
libmiuchiz/src/: commands.c  libmiuchiz.c  timer.c
miuchiz/: CMakeLists.txt
miuchiz-dump-flash/: CMakeLists.txt  miuchiz-dump-flash.c
miuchiz-dump-flash/src/: miuchiz-dump-flash.c
miuchiz-eject/: CMakeLists.txt
miuchiz-eject/src/: miuchiz-eject.c
miuchiz-load-flash/: CMakeLists.txt  miuchiz-load-flash.c
miuchiz-load-flash/src/: miuchiz-load-flash.c
miuchiz-read-creditz/: CMakeLists.txt
miuchiz-read-creditz/src/: miuchiz-read-creditz.c
miuchiz-set-creditz/: CMakeLists.txt
miuchiz-set-creditz/src/: miuchiz-set-creditz.c
miuchiz-status/: CMakeLists.txt  miuchiz-status.c
miuchiz-status/src/: miuchiz-status.c
miuchiz/completions/: miuchiz
miuchiz/include/actions/: dump-flash.h  dump-otp.h  eject.h  load-flash.h  read-creditz.h  set-creditz.h  status.h
miuchiz/src/: miuchiz.c
miuchiz/src/actions/: dump-flash.c  dump-otp.c  eject.c  load-flash.c  read-creditz.c  set-creditz.c  status.c
