cmake_minimum_required(VERSION 3.0.0)
project(miuchiz-handheld-usb-utils VERSION 0.1.0)
add_subdirectory(libmiuchiz)
add_subdirectory(miuchiz-load-flash)
add_subdirectory(miuchiz-dump-flash)
add_subdirectory(miuchiz-set-creditz)
add_subdirectory(miuchiz-read-creditz)
add_subdirectory(miuchiz-status)
add_subdirectory(miuchiz-eject)